--- a/libs/transactions/src/lib/transaction-form/transaction-form.component.html
+++ b/libs/transactions/src/lib/transaction-form/transaction-form.component.html
@@ -1,3 +1,6 @@
 <form [formGroup]="form">
-  <input class="amount-transaction" matInput type="number" />
+  <mat-form-field>
+    <mat-label>Montant</mat-label>
+    <input class="amount-transaction" matInput type="number" />
+  </mat-form-field>
 </form>
